--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -38,12 +38,14 @@
 		<div class="row">
 			<% if user_signed_in? %>
 				<% unless comment.user == current_user %>
-				<!-- 
-					<%= link_to '+', voteup_article_comment_path(@article, comment), class: "btn btn-success btn-xs" %>
-					<%= link_to '-', votedown_article_comment_path(@article, comment), class: "btn btn-danger btn-xs" %>
-					 -->
-					<%= link_to '+', '#', class: "btn btn-success btn-xs voteupc", data: {comment_id: comment.id, article_id: @article.id} %>
-					<%= link_to '-', '#', class: "btn btn-danger btn-xs votedownc", data: {comment_id: comment.id, article_id: @article.id} %>
+					<% if comment.votes.where(user_id: current_user.id).first.nil? %>
+						<!-- 
+						<%= link_to '+', voteup_article_comment_path(@article, comment), class: "btn btn-success btn-xs" %>
+						<%= link_to '-', votedown_article_comment_path(@article, comment), class: "btn btn-danger btn-xs" %>
+						 -->
+						<%= link_to '+', '#', class: "btn btn-success btn-xs voteupc", data: {comment_id: comment.id, article_id: @article.id} %>
+						<%= link_to '-', '#', class: "btn btn-danger btn-xs votedownc", data: {comment_id: comment.id, article_id: @article.id} %>
+					<% end %>
 				<% end %>
 			<% end %>
 		</div>
