modify article voting buttons to support both html and json

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -44,8 +44,8 @@
 					<% unless article.user == current_user %>
 						<% if article.votes.where(user_id: current_user.id).first.nil? %>
 							<div class="row">
-								<%= link_to '+', '#', class: "btn btn-success btn-xs voteup", data: {article_id: article.id} %>
-								<%= link_to '-', '#', class: "btn btn-danger btn-xs votedown", data: {article_id: article.id} %>
+								<%= link_to '+', voteup_article_path(article), class: "btn btn-success btn-xs voteup", data: {article_id: article.id} %>
+								<%= link_to '-', votedown_article_path(article), class: "btn btn-danger btn-xs votedown", data: {article_id: article.id} %>
 								<!-- 
 								<%= link_to '-', votedown_article_path(article), class: "btn btn-danger btn-xs" %>
 								<%= article.votes.where(user_id: current_user.id).first.nil?.inspect %>
