Modify text formatting. Remove simple_format, add html_safe

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,7 +19,7 @@
 		</h2>
 
 		<p>
-			<%= simple_format(truncate(article.text, length: 250)) %>
+			<%= truncate(article.text, length: 250, separator: /\s/, escape: false).html_safe %>
 		</p>
 
 		<div class="row">
