--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -9,5 +9,5 @@
 
 <p>
   <%= f.label :text %><br />
-  <%= f.text_area :text, class: 'form-control', rows: 15 %>
+  <%= f.cktext_area :text, class: 'form-control' %>
 </p>
